Fixed URL path error

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>{% if page.title %}{{ page.title }} - {% endif %}Riigi infosüsteemi haldussüsteem RIHA</title>
-    <link rel="icon" type="image/png" href="{{ CNAME }}/assets/coat-of-arms-favicon.png">
-    <link rel="apple-touch-icon" href="{{ CNAME }}/assets/apple-touch-coat-of-arms-favicon.png">
+    <link rel="icon" type="image/png" href="assets/coat-of-arms-favicon.png">
+    <link rel="apple-touch-icon" href="assets/apple-touch-coat-of-arms-favicon.png">
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="css/bower_components/font-awesome/css/font-awesome.min.css">
@@ -30,7 +30,7 @@
 <div id="headerInclude">
 </div>
 <main class="container" id="content">
-    {% if page.title %}<header class="pagehead" style="background-image:url({{ CNAME }}/assets/images/data/intro-bg.png)">
+    {% if page.title %}<header class="pagehead" style="background-image:url(assets/images/data/intro-bg.png)">
         <div class="row">
             <div class="col-12">
                 <h1 class="mb-0 mb-md-4">{{ page.title }}</h1>
