--- a/docs/css/resources.css
+++ b/docs/css/resources.css
@@ -1,9 +1,8 @@
 h2 {
-    font-size: 60px;
+    font-size: 2rem;
     font-weight: bold;
     line-height: 1;
     padding-bottom: 14px;
-    margin-top: 30px;
     margin-bottom: 20px;
     text-transform: uppercase;
     color: #023cc1;
