--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -18,13 +18,7 @@
 
     <link rel="stylesheet" href="css/resources.css">
     <script src="css/bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript">
-        $(function () {
-            $("#headerInclude").load("header.html #header");
-            $("#footerInclude").load("footer.html #footer");
-        });
 
-    </script>
 </head>
 <body>
 <div id="headerInclude">
@@ -45,7 +39,7 @@
 </main>
 <div id="footerInclude"/>
 </div>
-
+<script src="css/bower_components/bootstrap/dist/js/bootstrap.min.js"></script>
 <!-- Google Analytics Tracking Code for test.riha.ee -->
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -55,6 +49,21 @@
   ga('create', 'UA-66693747-3', 'auto');
   ga('send', 'pageview');
 </script>
+   <script type="text/javascript">
+        $(function () {
+            $("#headerInclude").load("header.html #header");
+            $("#footerInclude").load("footer.html #footer", function() {
+                $('.menu-toggle').on('click',function(){
+                    if($("#mainmenu").hasClass('collapsing'))
+                        return false;
+                    $("body").toggleClass("nav-open");
+                    $('#mainmenu').collapse('toggle')
+                })
+            });
+            
+        });
+
+    </script>
 </body>
 
 </html>
